--- a/package.json
+++ b/package.json
@@ -9,16 +9,27 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "firebase": "^10.4.0",
+    "@zegocloud/zego-uikit-prebuilt": "^1.8.10",
+    "firebase": "^10.2.0",
+    "firebase-admin": "^11.10.1",
+    "framer-motion": "^10.16.4",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.8.2",
+    "react-calendar": "^4.6.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.11.0",
-    "react-router-dom": "^6.16.0",
+    "react-firebase-hooks": "^5.1.1",
+    "react-icons": "^4.10.1",
+    "react-image-crop": "^10.1.5",
+   
+    "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
+    "simple-peer": "^9.11.1",
+    "socket.io": "^4.7.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "dev": "npm run development",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -43,8 +54,9 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "autoprefixer": "^10.4.15",
+    "postcss": "^8.4.28",
     "tailwindcss": "^3.3.3"
   }
 }
