--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^4.10.1",
     "react-image-crop": "^10.1.5",
-   
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "simple-peer": "^9.11.1",
     "socket.io": "^4.7.2",
+    "swiper": "^8.4.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
