--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@zegocloud/zego-uikit-prebuilt": "^1.8.10",
+    "emailjs-com": "^3.2.0",
     "firebase": "^10.2.0",
     "firebase-admin": "^11.10.1",
     "framer-motion": "^10.16.4",
@@ -23,6 +24,7 @@
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
+    "recharts": "^2.8.0",
     "simple-peer": "^9.11.1",
     "socket.io": "^4.7.2",
     "swiper": "^8.4.7",
