--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^10.2.0",
     "firebase-admin": "^11.10.1",
     "framer-motion": "^10.16.4",
+    "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-big-calendar": "^1.8.2",
     "react-calendar": "^4.6.0",
